Fixed Typo in Headline Made Username and Password "required"

--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -14,16 +14,14 @@
     <form>
       <label>AdViz
 
-        <br>Dein Kontakbuch <br>
+        <br>Dein Kontaktbuch <br>
       </label>
       <br>
-
-
       <label>
-        <input type="text" placeholder="username"/>
+        <input type="text" placeholder="Username" required/>
       </label>
       <label>
-        <input type="password" placeholder="password"/>
+        <input type="password" placeholder="Password" required/>
       </label>
 
       <button>LOGIN</button>
