Added a Welcome Message to the Header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <!-- LOGIN FORM + HEADER -->
 <header>
     <ul class="headerList">
+        <li style="float: left" class="headerWelcomeMessage">Welcome to Adviz</li>
         <li style="float: right" class="headerAdvizButton"><a href="index.html">ADVIZ</a></li>
     </ul>
 </header>
@@ -38,6 +39,7 @@
 <div class="map_container">
     <div class="header">
         <ul class="headerList">
+            <li style="float: left" class="headerWelcomeMessage">Welcome, TestUser</li>
             <li class="headerButtons"><a href="">Map</a></li>
             <li class="headerButtons"><a href="">Contacts</a></li>
             <li class="headerButtons"><a href="">Latest Updates</a></li>
@@ -80,7 +82,7 @@
 </div>
 
 
-<hr style="margin-top: 20%">
+<hr style="margin-top: 5%">
 
 <!-- ADD CONTACT SCREEN -->
 
