Added Layout and Design for the Contact table Added more Responsiveness for all grid elements Replaced most px values with % Improved Grid Layout, gaps and padding

--- a/index.html
+++ b/index.html
@@ -48,20 +48,44 @@
             <li style="float: right" class="headerAdvizButton"><a href="index.html">ADVIZ</a></li>
         </ul>
     </div>
-    <div class="contactList">
+    <div id="contactList">
         <aside class="contact_list">
             <table id="ul_contacts">
                 <tr>
                     <th>Contacts</th>
                 </tr>
                 <tr>
-                    <td>Person Name 1</td>
+                    <td>Hello World</td>
                 </tr>
                 <tr>
-                    <td>Person Name 2</td>
+                    <td>Hi There</td>
                 </tr>
                 <tr>
-                    <td>Person Name 3</td>
+                    <td>Test User</td>
+                </tr>
+                <tr>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>-</td>
                 </tr>
             </table>
         </aside>
@@ -73,16 +97,14 @@
         </iframe>
     </div>
     <div class="buttonArea">
-        <footer class="button_row">
             <button class="mapButton">Add Contact</button>
             <button class="mapButton">Show All Contacts</button>
             <button class="mapButton">Show All My Contacts</button>
-        </footer>
     </div>
 </div>
 
 
-<hr style="margin-top: 5%">
+<hr style="margin-top: 4%">
 
 <!-- ADD CONTACT SCREEN -->
 
