Add Contact Formular

--- a/index.html
+++ b/index.html
@@ -101,15 +101,56 @@
             <button class="mapButton">Show All Contacts</button>
             <button class="mapButton">Show All My Contacts</button>
     </div>
+    <br>
 </div>
 
 
-<hr style="margin-top: 4%">
+
+<hr style="margin-top: 150px">
 
 <!-- ADD CONTACT SCREEN -->
 
-<div>
-    <h1>ADD CONTACT SCREEN</h1>
+<div class = addCONTACT>
+
+
+    <div class="add_form">
+        <form>
+
+                <div class = "add_contact_header">
+                    <h1>Add Contact</h1>
+                </div>
+
+            <div class=" add_contact_from">
+
+
+                <label>First Name <input type="text" required></label>
+                <label>Last Name <input type="text" required></label>
+                <label>Street & Number <input type="text" required></label>
+                <label>ZIP  <input type="text" required></label>
+                <label>City  <input type="text" required></label>
+                <label>Country  <input type="text"></label>
+                <label>Phone <input type="text" ></label>
+                <label>Date of birth <input type="date" ></label>
+                <label>public? <input type="checkbox" ></label>
+                <!--TODO Dropdown muss noch rein-->
+
+                <br>
+                <br>
+                <br>
+
+                <button>
+                    Add
+                </button>
+
+            </div>
+
+
+
+
+
+        </form>
+    </div>
+
 </div>
 
 <hr style="margin-top: 20%">
