add contact form adjusted

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <label>ZIP  <input type="text" required></label>
                 <label>City  <input type="text" required></label>
                 <label>Country  <input type="text"></label>
-                <label>Phone <input type="text" ></label>
+                <label>Phone <input type="tel"></label>
                 <label>Date of birth <input type="date" ></label>
                 <label>public? <input type="checkbox" ></label>
 
