--- a/index.html
+++ b/index.html
@@ -4,28 +4,23 @@
     <meta charset="UTF-8">
     <title>AdViz</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="function.js" charset="UTF-8"></script>
+    <script src="function.js" async defer></script>
 </head>
 <body id="body">
 
-<!-- LOGIN FORM + HEADER -->
-<header>
-    <ul class="headerList">
-        <li style="float: left" class="headerWelcomeMessage">Welcome to Adviz</li>
-        <li style="float: right" class="headerAdvizButton"><a href="index.html">ADVIZ</a></li>
-    </ul>
-</header>
+<!-- LOGIN FORM  -->
 
-<div class="login">
-    <form class="form">
-        <div class="form_header">
+
+<div id="login">
+    <form id="form">
+        <div id="form_header">
             <h1>AdViz <br> Your Contact Book</h1>
         </div>
-        <div class="form_main">
-            <div class="form_headertext">LOGIN</div>
-            <label><input type="text" placeholder="E-Mail" required/></label>
-            <label> <input type="password" placeholder="Password" required/></label>
-            <button>LOGIN</button>
+        <div id="form_main">
+            <div id="form_headertext">LOGIN</div>
+            <label><input id="usernameLabel" type="text" placeholder="E-Mail or Username" required/></label>
+            <label> <input id="passwordLabel" type="password" placeholder="Password" required/></label>
+            <button id="loginBtn" type="button">LOGIN</button>
             <p id="newMemberCreate">New Member? <a id="newMemberCreateLink" href="">Create Account</a></p>
             <a id="newMemberReset" href="">Reset Password</a>
         </div>
@@ -33,23 +28,24 @@
     </form>
 </div>
 
-<hr>
+<!-- <hr> -->
+
 <!-- MAP SCREEN -->
 
-<div class="map_container">
-    <div class="header">
+<div id="map_container">
+    <div id="header">
         <ul class="headerList">
-            <li style="float: left" class="headerWelcomeMessage">Welcome, TestUser</li>
+            <li id="welcomeMessage" style="float: left" class="headerWelcomeMessage">Welcome, TestUser</li>
             <li class="headerButtons"><a href="">Map</a></li>
             <li class="headerButtons"><a href="">Contacts</a></li>
             <li class="headerButtons"><a href="">Latest Updates</a></li>
             <li class="headerButtons"><a href="">About</a></li>
-            <li class="headerButtonsNoBorder"><a href="">Logout</a></li>
+            <li class="headerButtonsNoBorder"><a href="index.html">Logout</a></li>
             <li style="float: right" class="headerAdvizButton"><a href="index.html">ADVIZ</a></li>
         </ul>
     </div>
     <div id="contactList">
-        <aside class="contact_list">
+        <aside id="contact_list">
             <table id="ul_contacts">
                 <tr>
                     <th>Contacts</th>
@@ -106,11 +102,11 @@
 
 
 
-<hr style="margin-top: 150px">
+<!-- <hr style="margin-top: 150px"> -->
 
 <!-- ADD CONTACT SCREEN -->
 
-<form class="addContactForm">
+<form id="addContactForm">
     <h1>Add a new Contact</h1>
     <label for="firstName">First Name</label> <input id="firstName" type="text" required>
     <label for="lastName">Last Name</label> <input id="lastName" type="text" required>
@@ -131,11 +127,11 @@
 </form>
 
 
-<hr>
+<!-- <hr> -->
 
 <!-- UPDATE CONTACT SCREEN -->
 
-<form class="addContactForm">
+<form id="updateContactForm">
     <h1>Update your Contact</h1>
     <label for="firstNameU">First Name</label> <input id="firstNameU" type="text" value="Test" required>
     <label for="lastNameU">Last Name</label> <input id="lastNameU" type="text" value="User" required>
@@ -157,7 +153,7 @@
     <button>Delete</button>
 </form>
 
-<hr>
+<!-- <hr> -->
 
 </body>
 </html>
