Added separate class for update form checkbox

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <label for="countryU">Country</label>  <input id="countryU" type="text" >
     <label for="phoneU">Phone</label> <input id="phoneU" type="tel">
     <label for="dobU">Date of birth</label> <input id="dobU" type="date" >
-    <label for="privateU" class="privateCheckbox"> Public Contact</label><input id="privateU" class="privateCheckbox" type="checkbox">
+    <label for="privateU" class="privateCheckbox"> Public Contact</label><input id="privateU" class="privateCheckboxU" type="checkbox">
 
     <button>Update</button>
     <button>Delete</button>
