[+] Added Error Message label for addContact form

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 <form id="addContactForm">
     <button id="backButtonAdd"><i class="fa-solid fa-circle-chevron-left"></i></button>
     <h1>Add a new Contact</h1>
+    <div id="addContactErrorLabel"></div>
     <label for="firstName">First Name</label> <input id="firstName" type="text" required>
     <label for="lastName">Last Name</label> <input id="lastName" type="text" required>
     <label for="streetAndNumber">Street & Number</label> <input id="streetAndNumber" type="text" required>
