[/] Moved to public static folder to prepare for backend [+] Added comments [/] Updated File Paths

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title id="title">AdViz | Login</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="module" src="function.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="module" src="/js/function.js" defer></script>
     <!-- Data Script  -->
     <script type="module" src="data/user.js" defer></script>
     <!-- Icons from Fontawesome  -->
     <script src="https://kit.fontawesome.com/8268b705e0.js" async crossorigin="anonymous"></script>
+    <!-- JS API LOADER  -->
     <script src="https://unpkg.com/@googlemaps/js-api-loader@1.0.0/dist/index.min.js" defer></script>
 </head>
 <body id="body">
