[-] Removed contact screen prototype [-] Removed old CSS Stuff

--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,6 @@
     </form>
 </div>
 
-
-
 <!-- MAP SCREEN -->
 
 <div id="map_container">
@@ -43,10 +41,10 @@
         <ul class="headerList">
             <li class="headerWelcomeMessage" style="float: left">Welcome, TestUser</li>
             <li class="headerButtons"><a  href="#"><i class="fa-solid fa-map"></i> Map</a></li>
-            <li class="headerButtons"><a href="#" onclick=ttest()><i class="fa-solid fa-address-card"></i> Contacts</a></li>
+            <li class="headerButtons"><a href="#" ><i class="fa-solid fa-address-card"></i> Contacts</a></li>
             <li class="headerButtons"><a href="#"><i class="fa-solid fa-circle-info"></i> About</a></li>
             <li class="logoutBtn"><a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
-            <li style="float: right" class="headerAdvizButton"><a href="index.html">ADVIZ</a></li>
+            <li style="float: right" class="headerAdvizButton"><a href="#">ADVIZ</a></li>
         </ul>
     </div>
     <div id="contactList">
@@ -65,31 +63,6 @@
     <br>
 </div>
 
-<div id="contactScreen">
-    <div class="header">
-        <ul class="headerList">
-            <li class="headerWelcomeMessage" style="float: left">Welcome, TestUser</li>
-            <li class="headerButtons"><a  href=""><i class="fa-solid fa-map"></i> Map</a></li>
-            <li class="headerButtons"><a href=""><i class="fa-solid fa-address-card"></i> Contacts</a></li>
-            <li class="headerButtons"><a href=""><i class="fa-solid fa-circle-info"></i> About</a></li>
-            <li class="logoutBtn"><a href="index.html"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
-            <li style="float: right" class="headerAdvizButton"><a href="index.html">ADVIZ</a></li>
-        </ul>
-    </div>
-    <div id ="contactCards">
-        <div class="card">
-            <img src="img_avatar.png" alt="Avatar" style="width:100%">
-            <div class="container">
-                <h4><b>John Doe</b></h4>
-                <p>Architect & Engineer</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
-<!-- <hr style="margin-top: 150px"> -->
 
 <!-- ADD CONTACT SCREEN -->
 
@@ -109,9 +82,6 @@
 
     <button id="addButton">Add</button>
 </form>
-
-
-<!-- <hr> -->
 
 <!-- UPDATE CONTACT SCREEN -->
 
@@ -140,7 +110,6 @@
         <span class="fas fa-times"></span>
     </div>
 </div>
-
 
 </body>
 </html>
